# become-a-rust-developer

./: .gitignore  README.md
chat-system-by-tonic/proto/: chat.proto
chat-system-by-tonic/server/: Cargo.toml  build.rs
chat-system-by-tonic/server/src/: main.rs
convert-qr/: Cargo.toml
convert-qr/src/: lib.rs  multi_format_reader.rs  reader.rs  result_point.rs
githab-api/src/: main.rs
redis-usage/rust_pubsub/: Cargo.toml
redis-usage/rust_pubsub/src/: main.rs  message.rs  redis.rs
rust-example/src/: main.rs
simple-application/githab-api/: Cargo.toml
simple-application/rust-example/src/: main.rs
simple-application/todo-api/: .env
simple-application/todo-api/src/db/: models.rs  schema.rs
simple-application/todo-app/: .env  sample.sqlite3
simple-application/todo-app/src/: main.rs
simple-application/todo-app/static/: add.html  index.html
simple-tonic-app/: docker-compose.yml
simple-tonic-app/proto/: demo.proto  user.proto
simple-tonic-app/server/: Cargo.toml  build.rs
simple-tonic-app/server/src/: main.rs
todo-api/: .env  Cargo.toml  dev.sqlite3  docker-compose.yml
todo-api/migrations/2021-11-12-132026_create_todos/: up.sql
todo-api/src/: main.rs  schema.rs
todo-api/src/error/: error.rs
todo-app/: Cargo.toml  sample.sqlite3
todo-app/migrations/2021-11-11-121044_create_todos/: up.sql
todo-app/src/: main.rs  models.rs  schema.rs
todo-app/static/: index.html
todo-app/static/css/: index.css
tonic-and-postgres-database-examples/: .env  Cargo.toml  Makefile  build.rs
tonic-and-postgres-database-examples/proto/: user.proto
tonic-and-postgres-database-examples/src/: db_connection.rs  main.rs  service.rs
web-app/: Cargo.toml
web-app/backend/: Cargo.toml
web-app/backend/src/: database.rs  lib.rs  main.rs
web-app/backend/src/http/: login_credentials.rs  login_session.rs  logout.rs  mod.rs
web-app/backend/src/server/: server.rs  test.rs
x-project/: Cargo.rs
x-project/x-lib/: Cargo.toml
x-project/x-lib/src/: lib.rs  server.rs
x-project/x-server/: Cargo.toml
