[package]
name = "todo-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
diesel = { version = "1.4.8", features = ["sqlite", "r2d2" ] }
r2d2 = "0.8.9"
dotenv = "0.15.0"
serde = "1.0.130"
serde_json = "1.0.69"
