[package]
name = "todo-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
diesel = { version = "1.4.8", features = ["postgres", "r2d2" ] }
r2d2 = "0.8.9"
dotenv = "0.15.0"
serde = "1.0.130"
serde_json = "1.0.69"
derive_more = "0.99.16"
log = "0.4.14"
env_logger = "0.9.0"
validator = "0.14.0"
validator_derive = "0.14.0"
actix-rt = "2.4.0"
