[package]
name = "todo-app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.5.0"
actix-web = "3.3.2"
diesel = { version = "1.4.8", features = ["sqlite"] }
dotenv = "0.15.0"
handlebars = { version = "4.1.4", features = ["dir_source"] }
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.69"
