[package]
name = "tonic-and-postgres-database-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "client/src/main.rs"

[[bin]]
name = "server"
path = "./src/main.rs"

[dependencies]
anyhow = "1.0.53"
async-stream = "0.3.2"
bytes = "0.4"
chrono = "0.4.19"
config = "0.11.0"
console = "0.15.0"
dotenv = "0.15.0"
futures-preview = "0.2.2"
http = "0.2.6"
metrics = "0.18.0"
metrics-exporter-prometheus = "0.8.0"
postgres = "0.19.2"
prost = "0.9.0"
prost-derive = "0.9.0"
prost-types = "0.9.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_derive = "1.0.136"
serde_json = "1.0.79"
tokio = { version = "1.16.1", features = ["full"] }
tonic = "0.6.2"
tower = "0.4.11"
uuid = "0.8.2"

[build-dependencies]
tonic-build = "0.6"
