[package]
name = "chat-system-by-tonic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
async-stream = "0.3.2"
futures = "0.3.21"
futures-core = "0.3.21"
futures-util = "0.3.21"
prost = "0.9.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.16.1", features = ["full"] }
tokio-stream = "0.1.8"
tonic = "0.6.2"

[build-dependencies]
tonic-build = "0.6.2"
