[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12.0"
actix-cors = "0.5.4"
actix-files = "0.5.0"
actix-web = { version = "3.3.3", features = ["openssl"] }
anyhow = "1.0.53"
diesel = { version = "1.4.8", features = ["r2d2", "postgres"] }
env_logger = "0.9.0"
log = "0.4.14"
num_cpus = "1.13.1"
r2d2 = "0.8.9"
serde = { version = "1.0.135", features = ["derive"] }
serde_json = "1.0.78"
url = "2.2.2"
webapp = "1.0.0"
